MDEV-6442: Assertion `join->best_read < double(...)' failed with optimizer_use_condition_selectivity >=3

- Fix the crash by making get_column_range_cardinality() 
  to handle the special case where Column_stats objects 
  is an all-zeros object (the question of what is the point
  of having Field::read_stats point to such object remains a 
  mystery)

- Added a few comments. Learning the code still.